[package]
name = "rust-ocaml-starter"
version = "0.1.0"
edition = "2021"

[dependencies]
ocaml = { git = "https://github.com/crackcomm/ocaml-rs", branch = "ocaml5-fortran" }

[build-dependencies]
ocaml-build = { git = "https://github.com/crackcomm/ocaml-rs", branch = "ocaml5-fortran", features = [
  "dune",
] }
